update cloudflare config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,40 +1,39 @@
-#ENC[AES256_GCM,data:WkXW/uevgq/4+kuNwFKspj/7xZ0kO/y4LW26eA3yCeCmCo/Wa9W0SQ3LfWaDOYMaIGYT6cf+/Qa6xz6tQkH97oI=,iv:yRcPIwX6lXhCbJWCxbFXnMxZnNOvqrfuHbNQ63aC+d4=,tag:8lOl7TwBb8BDKzQFij8YDA==,type:comment]
-#ENC[AES256_GCM,data:W+CAH/HU7CDfHU3ZkDp5Jm4xgR37jgUsOOBMxD2SNOv/te2nxF3ifYAn4j4=,iv:LRTuHY9pX+KKboO6Ylqr6b/vXO2uAlZlvm0xSjj61G4=,tag:+XGDe+s+lhw4KjMa30CN1w==,type:comment]
-VIP: ENC[AES256_GCM,data:dvrjh/wXxTUPl+A/Nw==,iv:kInabrZUyBwHOXyzGx6IWOfXb7FkywZsTgDFcP0ZqCQ=,tag:xFzgMfuYtid1q6gG0XwIhw==,type:str]
-#ENC[AES256_GCM,data:8ez1fPpkyI5BYN0YLOWjDR0/UC338mcFN1TL,iv:ToOLI68hJ1xrA6i/e2AMyae4bTt3GU+W8Fq0zU2Jzf0=,tag:PPJjBxp8IMve7GoLkOpgbA==,type:comment]
-#ENC[AES256_GCM,data:+GXdl4NFNAY2il8zr8mMQa+zNu/gJAUDXy/TgtwpTKTqukyPyyrFb9Uyany+CqaJCucw+lgkRYI+0erWH+F4YE0aNLQxLkOGiyJbzHDXZAaVFEDVOW1pSvk=,iv:cVsj7TkXtA5ZPylRCxwUstqX2YcmQZk6Het/DS+o7QM=,tag:j7wlzLpT31HlRQSTHunWWw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:XjKhSKn6tOIqpnxodJM=,iv:Z1sZxiAfPYcTHoFQ2YPCBTRllwS3MNsdt0EyW+vv00M=,tag:nJ9r350sy7uAaJ2e/bH0vA==,type:str]
-#ENC[AES256_GCM,data:8fZtJpi0Rc3VN8w0RXwnSdvLX3mf866WUt9lQ3ipdVP8Vg==,iv:Vtogg0ExmdzDDoSUkkydqpR6YMboyVJZI251rWvYvyg=,tag:U1r6WYPYr8Aj5wahM4dhhQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:Zh+ChtCLUwHMx47xvw==,iv:T0l2SPT7CVkwbMBSfq3FUJWB2gbzdiZIdtqo35jsifA=,tag:agmswFZRFu14SU8VLWNIaQ==,type:str]
-#ENC[AES256_GCM,data:ioRb8MsA/uTfJEPzNjEQskr50g0ARehRhVkXnWKZbK55jYrtNgmKRdvL0h2iRqE=,iv:C0/8mteGscHeXu65lx3xE7aGYZxESiIjd2unYwVjtBs=,tag:GwfSQn5i0ehLYrjvvCagtw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:d22qn/Mvb3lHrERBg6JqccYgMsS0gDqeHzJjjnnQog==,iv:83frX5NHVsngMv2QPMvI4QqBoNSK485vsXEoMuAh38g=,tag:iZbusMb2f+MovNQnOrqVKw==,type:str]
-#ENC[AES256_GCM,data:AbZr+n7uPwEda+rjKUTR0bE8gUDdGYC3oVPrJ7v2htS53ra/wD/0brRlAmik6mLty8Yd3FDqyLSFKdllQoRqFbX3uUVmMLM8UrE5t8MK+8GGog==,iv:4N1rcdRJPT22W5I7q9DHb5K31FcUAR6l6DfCkB+/ZtE=,tag:+F/1HAVljpiecQgieoiWGQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:2pX0ReSAjE+2kClyPWbI,iv:SkitXJEYzzscoPFby/SYL6hYeA2ly8gp/M62DoOZVio=,tag:tKF8F2N/3Mv4J0h3+YSqxw==,type:str]
-#ENC[AES256_GCM,data:JoIt91S0MyDU9EO9l3K9iRRMzcXYKkutKbPMwOedDoEm,iv:zh/zrZPgD3AzO9hAhtlZbBVKOV9NN06YTfzj/zVkH3A=,tag:alviDqmuASLmPPV8R7+LEw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:h1ebXknsIR7bjBjw4++2,iv:UFYEKJbY6iLAmLhiL9O8ZYmFzAQZqoZH3lVUn/N6Ijs=,tag:v/n//83ytLSQhwJLMoUwAg==,type:str]
-#ENC[AES256_GCM,data:KapWRp5Hndl+/lHeF9JZ7J1ES/7TOpGcspKTLR8NhUGLNQCal6Qray8z2zVZ9K5EGUCFlRwZWExGdyv0sWEKL2cNoJxX+YV1+H/461RUvxA=,iv:HfLwOpHaSGLjzEBlQ6psfqTc+mxDZuqKE50cVvXmUfA=,tag:6jos4guHMHA6s/YRhgB3mA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:gCVE7ofx1HZvAaIR/s+b,iv:/x1wLcREnV9d9PMp6mixo/5wyvxKQRBt1iHLSaA0upE=,tag:D5/xJBSDhp1A2Fs277nQeg==,type:str]
-#ENC[AES256_GCM,data:D3muPW1MpTv4OV8Im0ZcbzsIGEUlgZAGcJrz4sc7Pq1G5rii66xJymw7QDqOt28gFJXBGoQAaXk60gCaMQjWE+YS41+q7C4nDX8o8YB+2ZQyms0Yk690,iv:rQaQ9fQv9KX8VWDnpR+Yok4SRUv9u+AhVkPRqTOQCs8=,tag:rJqLZeKUpuCkLYia5rV4YQ==,type:comment]
-#ENC[AES256_GCM,data:X4J8VYCB9lHDaoMmYnCdmRxy8nDLzOebbUlGis+LbmdGHxzGqLL/HnXeTlzpTFOj4/DhamLrAXsbXYAeF06snjn6yRRvNWXL4zsP+bL9mYt0tmSxnIDJ19iq8ouWJyqCqxeNsXR+oSS37faM00jXQyFM4+ahVz/Mg3ggNw==,iv:2RPPY8Sd3zToKO+4N5R22Gv7ZYuoQNb+tIi0krkLXOM=,tag:jrN92tDfe7bv5kWY/N3B2w==,type:comment]
-#ENC[AES256_GCM,data:auDFs/6pYwClrJ7N38jrTPJY2lyMqy6qTQm8TAdZIrTl2NPTV8lN9naq5TV1A/FOaxy+LMFFQUhq9XWD2rszUEPiPaB4gr5Ldqt0nEuvwvg=,iv:tMI9PPpWfyWtssIxVDiQ7+MoJGwOHot6VptaW1YzTiE=,tag:oWnnfUlcFQXwPYyzzw8SQQ==,type:comment]
-#ENC[AES256_GCM,data:as1rF0hE6FlfUPte5YeGdUKQCIeEfK1lxQDioGp6pzNZH31kqHdP78p2FxA/iWmejgJ45wgH,iv:NuSK48tCqy558RQBeaiyGdSrqkHtD6/eeD2vmHhPDcA=,tag:kgMdfm77QKr+lmnLRMqWfA==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:rBhqz+LfQyj8Z99Ni74=,iv:pJynK66dcalH4A5QjB6xVenAXlnqblwXGl5T8HCzp6A=,tag:AS4EZyAhzbyxpyLikNR3kw==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:r35qu8DSX7aoWvi3,iv:Ttfj27I5UIfH19LdoR1CaOPad3thlqkzuKWmUt8eAlk=,tag:ErKYIgqB660kAep1aNxFXg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:vTnJti3piYFQQQuU1RuEnvg=,iv:qFkP/32C3WBQ5uu4B2tz5t4A5toXtgXUpUEaG34/KY8=,tag:Rg0l008hqJjbb9olez2aZw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:00l3WgQ9/97xFqXKWy8YPtbQl0lyOJ1wANaLXHWWu2A=,iv:rtLFIMRLrrks7/T0GXNwT7GKxLPHxaA/bhRLqzgAKEk=,tag:LHKV4azMECE80sTjs5jX7g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:DolkLNpZMc+wTw27IOGehcsAClnJwQ7iHGk7IjvZeo2Y+azYMnNbew==,iv:sH0L2+EqPwCnIKvCNzd0La1A+E0y7qobgJCNqIft2xY=,tag:SPPOWatcTYFETCVUcU0QlQ==,type:str]
-#ENC[AES256_GCM,data:qgABn75YXiQx1awoDtU4BHmkheE+BmBLezWhlQDJU50b+xPVxF8FlpCOBFmDUgJeGtNHvngtvda92WwhQ4Bs5A==,iv:xU3Q0bS33xonDgERNj++Tu57QWirkLkP8EJcOaGN4CA=,tag:yn1pBbjyPxSJpThm+VDD/A==,type:comment]
-#ENC[AES256_GCM,data:REcgnfsWSvm0In5zopkFo5hxR8xZbb4tFdxmeI4L2v38wQiB4GjxrQjglnTZIzKZJEG3D+JS8mI=,iv:pItR1D1ZziyndP9f+qE6NKAHxiKG+cTpuA0JjgTNEFw=,tag:whuStOVj13mCGV9PvqAOQw==,type:comment]
-#ENC[AES256_GCM,data:j1rE56tOQJ1DU+yI0sDLYRU5NkZfA8berg==,iv:nHUlShoYHXqZt3/ZWDyWOdljPK/jjWZTGO6Pwg+9j1g=,tag:IzSYLGTeDlzF6c8Yk52lFQ==,type:comment]
-#ENC[AES256_GCM,data:S1CkdoQYRnM824ETxWC0xgIcFYrPj0pGVUQT61tMrJDvUs0TfGvyFVY/tCf4TjYhTxAIlGjy6YRU9WXgV+z6EZ5XWt05jhmlNxd4jdo=,iv:SOApCQ/WhV4GZE7PyFx2cu0/+/lqMmIwm9TqhGijuDk=,tag:lidB4nC+OpIgqaILXY4ilg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:6AQS4VjVbkTZyhmeGbmKqBi+SWDQfdn80gMKCeXRassNyqQ3mK4h6jfvJ7i5a0Lt,iv:K7IUVkFUWiqj5PYoMrU58tKolr7VHtCHmMFcIZ+tfCk=,tag:vJkiuFgxNYX3ak30M1xlEg==,type:str]
-#ENC[AES256_GCM,data:ym0ZcSRClghiToQBfLVasuTCiC6oMY+3eU3PsfRS7SXzs5SJEdb92D59LUhUXVNFDYKuy8w7zB9iyg6vGvQAa+IFTofr2Ok=,iv:sjyfrGhlGZBrIb4DJgd2LUJmm9/P5lVWSI3x8Ryv3y4=,tag:bK/XjPD3aquXzM4z2CfvTg==,type:comment]
-#ENC[AES256_GCM,data:azcBs7D77B14o4jKpUMoKzh1oBjf6kyHt/bTreySniTwm2jLB8XpYn65RKrnR0hwxhmQyuOc,iv:SVrwdDPr996D/sU5YVFRdQpaZKpdgK11w1j+cLKl1T0=,tag:hY73QxwyBiqEbGNwtTtBkg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:QM2wGdrPuw==,iv:sRkSRT0RWKBKwm755fogKjHPeVAP0hHr1qZpAzntKFc=,tag:NX2/HQUwBjIMh+smGzE+mw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7xgl34B2mN2otL8PdvX9C8ysQHk=,iv:enXlRRpefooBr4L+CVz+u3Ijv+C86kQnEBizv/RNqX0=,tag:NTUG/+xaj2tO8RddexpzfA==,type:str]
-#ENC[AES256_GCM,data:4tQmZeuJba3rvLhEd4g=,iv:hZOvhj/zmMa4HI9mNSZuL4zJ5LznPpUT0MPpE+Y1ojE=,tag:2ekQ1zwymNji4w9H0vWCbA==,type:comment]
-PODNET: ENC[AES256_GCM,data:uE6L+Gx31WrtViGuXw==,iv:nNFY6s2P8vgr7mAxHLkvr6AuWa/q4IUEtkPdgFNi1bc=,tag:22tVurC8lNNEIDxBl2F1gg==,type:str]
-SVCNET: ENC[AES256_GCM,data:0b8E6Ow+b65+kXPePw==,iv:XBRi7sK/exhKV/dyC4zs9IZXG1XmunjPfAuXqx6knJw=,tag:fXys8/IFSVwBFMrqJQAb8Q==,type:str]
+#ENC[AES256_GCM,data:pSdb7Gxh4MR+T8T0Q9JblDIE/XeDbpm2VOE38zPMdqOSv1NGQPLEOM58X7GvaLb4cjN1uvvBcrdBcJMzlwFnaiI=,iv:v1e55Zb3BSVJJW1MVlBq55/ac2H0d9TpJWa4MGdsl/0=,tag:YfPByaCp6udIyR17zh5AgQ==,type:comment]
+#ENC[AES256_GCM,data:D7+pqi3vcXUYA/h8EE+Bh/aWSUWIFG+jyb6G+VAtiGV3PcRkEcQp7MzQBSE=,iv:Yj3mvj7Ut6b5EnFgL/XOVqPRnTScXHesVh+r+TQSYxU=,tag:VaOIBJc+c6BDKFo61AwRXQ==,type:comment]
+VIP: ENC[AES256_GCM,data:VJuI3w0d5NXQ4MVN0g==,iv://u372LaEzhQslSG8A9pSZ2kh9G65+LRaVBsSD+zDzA=,tag:7hRdKFmlL8utywfBVKVp/g==,type:str]
+#ENC[AES256_GCM,data:DNdI9B1+CnYr9x/ZqCQL0ZdNJtp0Ox9skezl,iv:6ddfFcmBVAZIvvdO35rnD0a8vqMeNf22wqLDahZxRtY=,tag:BJ1rSSpT3EyhNPUbaWZV1A==,type:comment]
+#ENC[AES256_GCM,data:10wBW+DGMOtHhHWGoqS5z/YOm1BO1xj/XKz7UUDO7plgOUFJymbssAbaF4q8titYzl7rkV5QoMUy3HmJ6DuJGJpgwGNZMmXQ8IFPpKOGQMUVIoo57XUPw00=,iv:RQhR9JsAxHIFNwERHf7VANKBRjJhoHorhrUiLtne8Yg=,tag:eZCHZg+nqe0uE+4V++YdFw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:KjGg2W1GhJRwm9qSi24=,iv:0E1MGot3YCMZFjE6uNILQhpieX2DSF8I7aAEp47sIEE=,tag:suk2HhsLUklxKd4hVf7CZw==,type:str]
+#ENC[AES256_GCM,data:jnP5HCy3Gm1YU/yayO6gl6KqY/gRaPi7idTQc6vYWtVocA==,iv:EED6SuF6EQfB5IHFX9cNLXxFSohmRHvWPpckaHKLHlo=,tag:QlfXuOk1pjhsuvVOrksMYw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:DpV2I0Ev0BRCD6HIIA==,iv:22diV9OUNMMtcx6Ri5xLABjoXsCOr1Bu8yYj3SVALwk=,tag:P4rsSwvZ5LBl9Y+DIDP/KA==,type:str]
+#ENC[AES256_GCM,data:MH65VFT7MYRu6P4BKIzRsDq6GqX3FZD1SeRsmOKEecqprrR0KQV0OOX0dIaAAyc=,iv:wDKZVpvg3NWFlAGSXgVZrelJoIGZbvvKYclc18ApuUk=,tag:Ql+a5Sgco4jKl+o9k0+0/g==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:w42wKBByoH8I8hn5Pslpf3//jUy7SOm5B15r2VQoxA==,iv:sjfeezuziPVsgD/xmKCbOqcQ57nOHiojQ4dbulNkwJg=,tag:aVdNeNbAnuzJCcwzmCDc1A==,type:str]
+#ENC[AES256_GCM,data:S+ZMyELv3rRwSrOir6WD41Qsjf5Nx7SXSmgSvWdIPxNdTp8UTcmTqfzTYmg7YmEe3PZw7PNxkcTACNO72D4FhYTushlLGE18fsTJePn9LrjGrQ==,iv:zHELQco6Y7HOqGb980g6/shgDoH6WQ1lHWxNdnenmPw=,tag:wNAKiSzh5pG1bsMrzCf/zQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:6HCUQsMWyk+khSfIuKCr,iv:fAVrAjvV6dbNtsCGHm5ULi+Pf8ltP979/9e3Zne4Zuc=,tag:2MHI7K2WXiWJbe+uui4bMw==,type:str]
+#ENC[AES256_GCM,data:KBxJ9en3So+wT2Oj6i1QBNZ40P9KNY/HjolIBiFyW8e9,iv:kCCuqQlCRZAmbUQbDLZEA2UydtXtWgXQT4qf2wIBxWs=,tag:5xbGqfKzEK1KLZcCcOYPXA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Y5j8MvvKY+5mnPW1i9wJ,iv:ZJ/NJIRdpAzMdzT+YNangM0plLe1Z6Q+flquPelDGNo=,tag:48xb+oKF/ecDlm+dgRiLrA==,type:str]
+#ENC[AES256_GCM,data:rM0LnFXyO7WQoY/JQRMgQgJlt3Fr8CxbdHc9LySFSccBiLgX4V8Nji+3ghGNz0cn3N0w7W+EHh8j4vrSc0QXpw915Cu5u71nzuoVY47nDJQ=,iv:V8ZaNU3A7LuBZCw2lBKfOyKHPlVJWGziiTzQEsnw8Lo=,tag:KRsRhryvJRmlyjJ87ORaTQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:92abkJJFUa5pgvXhe7SH,iv:nbG+xmnjivkSF8aiY5UVNYriv8Zy80ET1ZfuZpkxLf8=,tag:bi6FFZSrp73Sd7TZJqtr+Q==,type:str]
+#ENC[AES256_GCM,data:JUJTmbC4kaaz59n1MCD02F+rQqzjBYWry2L92jIP2xcL0BvgcG/nkXI6mlG2KEauglt3GfIiGgEHqIHzUnmROa1dJjPHUANLqAwRmNrnS/SttHE2Cjau,iv:fJDWCiltESAp6LMe+CiYrBifVubujhXIN3bfQuSyeNs=,tag:t7AhrXfYTtIERJTJ7KUKVQ==,type:comment]
+#ENC[AES256_GCM,data:GV2D68udXWJjnAj7FglLiJyJ3mwDz2BZw7ywXZ5r93dtG/SvLC9qKqefyPQV0TgqcEsVtDvMAfeNdwegJkrHNxcKfGUihVYOfBFqCgCwZEi/pxwt3MhjxBnPQM14sJe/3rvTdNVr37EBeE8vBXqajjVXf74lJ48jB6Nz8g==,iv:xHdjhYikPv8bHVNqId1r4O67kQR6wjgLDUmfI403R8I=,tag:9J/WcCY5jh1vkUaXsIaLsw==,type:comment]
+#ENC[AES256_GCM,data:d4YZrQpINJPKGyuH+K0w3VV79GiO69Bh841tyHv4xmRrFEhuBWhVj56mqwsXOkyQdiVwpFkY0C2rPIsfzNEH7GoQVqFd9ClHZyBUlZN9Jog=,iv:zKE/VeON3l3bfqE7a53ABdwTTr80G2O8ukFlCqqa68Y=,tag:sqRZzNIVHAy6eI98IexoXA==,type:comment]
+#ENC[AES256_GCM,data:zETzTDZwllfk5/svbx0bZB9XaWcrrWFFY0nqfHhpiV9bX5IZLPb9bm1RGy/9hXotSNMdeQU5,iv:+zavOdragLqqRsAi39EXFG8F3ijkrMHmiAnf9V910gU=,tag:IZsgjpMlALXeucxvq7/o8Q==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:Y+fS6nSOO8VCE69m,iv:q+yUdFxZ6mTN0HWC3N1DztLP5EMhvSvqWgQg6eSeYXE=,tag:sT0lr1v/COJvccSThARwuQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:rk9DTARNCOsSWKgUqaNRsl0=,iv:nd5LNYVM2R/kR/7+B0YEuOwqum2tV3HWZILT/Tt/v7o=,tag:5l0nuaNsJxbWRRdjlXuAnw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:VOl8QeByJrppYdK+o/FbDbX3X9RTLBMBX4j0zxB9FFA=,iv:VbmyJY3GgecMNbbv9FQuqxRlt/h7fEKidb5XWtE3/Ew=,tag:svewWHFYVsI9m+my1fgAaQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Wl4UW+MgVNYYRbKPG6NbwF8yh4o1O8Qs8TEyw8ZmvSFj/K1DX91lgQ==,iv:RXCfxeIMAC+EijEGFsxQQru7yXTvUApqL5wAcAHNEZw=,tag:imK1mWIroOS410TH8P44KA==,type:str]
+#ENC[AES256_GCM,data:5M8qP7Sf2EUuT4cfaZgbCN598MeIKrxp2ijl07TDoEScwN08CHc553c++MOp6MFsxLwHoBRg74KM8IV6/JczuQ==,iv:Dwgbg5L4YtRCLHGTvm0bsFQIbj5ymsP7S+Lnl3X6S/c=,tag:ChCyv4pYAV9uaimQkzNYBw==,type:comment]
+#ENC[AES256_GCM,data:nyOFlSGpWj0LqDtVwq0D3pcOcHakOkR9XgeX4w1H6bE4QOsvcdzP6Sn/rFgQdBznAhqfzK2YBy8=,iv:YQlf4l5RsN+eKYXq/K4pKPm1tAgvwW8ut5x4qe4EiIc=,tag:gpLY/97ylLrfWMDWWTu3tw==,type:comment]
+#ENC[AES256_GCM,data:j5u3KQbB5raC/4L5hvPFnh4aAOt7U9xuyQ==,iv:O5KrB48d3T17X5m1UX0B3Dd3CHmqCzSiYsvu0H48fJI=,tag:rWv9ezkmIle/a9R4gifYFg==,type:comment]
+#ENC[AES256_GCM,data:Pv3gCX9bhe2ijZPml3p3cV9iW2JKPICiq03JKaSlRrOl6sWUFmawo3FK3HAEP0TYC8Jlsvjr21CYh17ijXVOeO2F9ccdPOkOIdoXKs0=,iv:ytHtYcQ8WvrTQphP9BRAKPflX5KU3r73wD4jvrxdn8U=,tag:L+tL8m36mvBfQBKG5iFw/g==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:kh4tM9VyQLVn3oeHVSglsOIcLL9yQJdYnf82j94pnVvIQTZOw5FqLqZ+bOteq8dB,iv:cBhW6eovSTYNEKHexFmRGonLYPypSdpFA0TYS4L3LLE=,tag:nwAgxhUy3nHiRglkl7usmQ==,type:str]
+#ENC[AES256_GCM,data:qsJVj9ArCX3Y6y6lwlbqrrrCfode3gf6ixYpCtQuzkXCAM08OteCYpPpfH9a6RQjAiJOUmLHwp4Ebl1+Z2Ozri0zTexhGNs=,iv:1uDNRNBWH3gsw72Fbq/a3x8+/btQoQKyqcVBEahefEU=,tag:TqybSp3EFi0p3eK994dv0g==,type:comment]
+#ENC[AES256_GCM,data:qZdMcmkhoUR4fLj6tVHpUbPIOBklCui7FZejhRo97EZ+EUlA8bepGwu/gOnkYLJxqt9T+6rT,iv:eMigIJaSKMqsd/4oHLQsiNJ226Co8cupz9cNU/pYDo4=,tag:rKIc3Fqg6k43SYtu8sE+8Q==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:okCfQGwiSg==,iv:n9ZTM2xgYE01ETHQb1yBvG5Q6MBPXB78odQEqpeINGY=,tag:sI1UVz5h8lYm2V91Br2vDQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rv4ckSJaKjQ8YQ02J93kRxa/6HQ=,iv:FT3fwsHKjKpV4MsWzaw1koKbX6A8fG1sREWuLHIKyPk=,tag:8mIlDMWwrjbidzumZRJM0A==,type:str]
+#ENC[AES256_GCM,data:1EFu9JcZEvppKyUPrf8=,iv:sQ87abuiQVPnUoJPjPjtMjfvON4KMPOunv1aIPJYVF0=,tag:87/rpXfRSwuIdlyxa2RpDQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:dx4D1vyutNVqYLCZow==,iv:kNkLH18thC7O3tNjhL5Cv3RtT2ZiOt33rMz432lPTbo=,tag:MNKb41kzY3HCvH0U+7XmEQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:bd9NG1RgOVrUzt3vjA==,iv:RQyzNphL7KDDXnSrJlBGp3OzfifxsSNMW+sIfkI1Wa0=,tag:4I4TZKwq6FCSg0rbdwVoPg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -45,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvVW8vNjQ1RTZUUExYZ3ho
-            S3ZLZXQ0NlRLeEhqQk5hR0hQb1loVVN3c1VVCkhFMzUrclFicmxId1dBVFl5cklC
-            R0NrUXJUcnZPV1BpUDczcit3cHdZV1UKLS0tIE9ZMyt1WGxSVnJTWWVhbXNZakQw
-            am5OcktQa0tkYWhzWmpSVDdiMTRIcVEKhpdbM6QRAjhH2IIjaJbwzoMtbICd01Ok
-            JvHRYgiHQRIUBhSYa+D2PJZLbTe6DVGnvwOBSbsm2KiRE/ZL2/8wdQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzNTNhSXJaQ2VwblRJb2hj
+            eVN6UzhJOVVDWE1OcWg4UzY1VjNOdHVZbjN3ClBuT0xUdFhLdUYzUU9sR0VadEhz
+            T2ZNc2JxMzR0NlFqOXFITkNyTW5RV00KLS0tIG5MdUo4eEQrTU8zekc1cXd6WGlB
+            cnh0ZXFXc0pOZEZicDRQYUxqUWZUbUEKbCv297cC15ic+uUjge0/begHnRtWtYmA
+            WYo7Ovl04lyUx7DkWEBendumCO1/a2NHAkKKu9dHMlIvS6JLIMsK4w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T19:08:30Z"
-    mac: ENC[AES256_GCM,data:Oif00Ps4ZaBsZGi9/xVc6XBHfLwsbd3RQyFvEsM61NbitiMINxdtC6mpj/YA3tp3AlcjlIOAFaIPxOgqOL1MDyc8BTw/2dMFG8DRObXS25Mfb0l5s86N2lRPKGu+DRq4pm/zhxyr8NYVtylJaHZsWwe5V8vyiAsYt7+aJNUhTng=,iv:l1b7c4rvXqVkpfnnIF7y3wWTepqDhBZWEeEzTDoQGGY=,tag:85YDlaIGP0+1EyjQUIDxFw==,type:str]
+    lastmodified: "2025-01-05T22:01:25Z"
+    mac: ENC[AES256_GCM,data:Bx/uIxYySp3Liw0/G0B3SKFJVuMRm1Vl4pZU9i2y8+hpPmKcElH5r7iNv/WWBDIed1eIqDdBYC5umU7KfG+orT9chB9fZeSbEMI+zs2oMbQQwYXWERsKDsTfIrEPxSUHl+dE0uK2/HU65JljvvfTQeUh9f3omKe298P8cSApc2k=,iv:NjU5sbBp4SPCdWu88gv0M0cLThj23R/kxKc/7jxocyU=,tag:5gJr8oQYHGA63cyDI1STSA==,type:str]
     pgp: []
     version: 3.9.1
