--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,44 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:bhIh9a+WEXn0p84a2ZaB8C4mFMu4dJvV0ypTwZOW/DDTiDIWPpYJduNPsUEETYlMypMP018fr8zSnT50sD4rm4I=,iv:kPvLuqEbqUuHl6olX8tMnexl6VE1d3maV3S6mW2cOpU=,tag:VOqCD75vIFcktdNwqAmQmw==,type:comment]
-    #ENC[AES256_GCM,data:VKRv80rX2dpjucAb9308mWbkdnhBqmRmPH5vc85kNVpE0n1P+amyRNVkCns=,iv:DBOisOqAjM/+zLnIyw3CJXw0FkeW+rB5c3ANSnxByGQ=,tag:6Uf1D8nFMWbPVsJXDDwyHw==,type:comment]
-    VIP: ENC[AES256_GCM,data:kGL4ulXMAyHc7v5a8A==,iv:TJetmtSP5Och9oKP1p6V1qf6P5e82COd2J7MzU+ab7A=,tag:zrBe+Uw6xO3VchdTXVJ9Wg==,type:str]
-    #ENC[AES256_GCM,data:DRkLjVtB58NBk3KXmzk9nRefUW/bpJdZucZF,iv:f2ZH4yZtTR+Kc8qSCr98iuCpgXKt+X9hwoSEVPTSaw4=,tag:Maip0mGAIdFIOvGfrN9n4Q==,type:comment]
-    #ENC[AES256_GCM,data:uKzjYgD1+9eP/QiD2Xcj/uU50W4P2axHitQM4pOBB1ei+lvDgxo3GhJut+lSjzm2x7ZRDg0l26sDMnV8RjT9N9rpObgdbuEzUEXv8ZlBwuyKmGXeBY4u68o=,iv:sYdFkzaAlJ3big+/4MEjP8tCw/TbIVYZzsRwHaOth1c=,tag:0Tsk6dEKTmv4K89hTOfeRw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:uPUXmwjt+1wvCPfLuqM=,iv:ufBFTHWMam1qGiv74kBDPyMt0kfMaXQTrFI48TOtG8w=,tag:O2U/P3JlJRKbbmQuOo6DMA==,type:str]
-    #ENC[AES256_GCM,data:DjWZd2T7wA1hhFg98JwUx4w+e/DrPAO9K5jpBqJrmgTdCw==,iv:s/1i2Yc8faGhZZZKqOrBlcBB/akGKNYT1augO4C1MSc=,tag:4x841eWrBcSeltyL/PJoGw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:xo5eSbnUnjj85IWAgg==,iv:Tmc1BcG1mEnRulmS0yozC1sOa26ho6UGh681RFAm0sA=,tag:Zez/3Wkq+7kiPzErh8LFzw==,type:str]
-    #ENC[AES256_GCM,data:sNVv1kgXB/6FvDIm0aZHHc3HyZmAjxAkrvxdsZULy0J6eIxc1DSixs398m7MOeA=,iv:f14FtiL32mmghNYNQHVj7C/o9aB5gwxBoLDPmzwFE2U=,tag:RAUJ4rAczmXcJYBRXM20kg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:SmN/xjMB77Z+9GxeZsm+Dv6J8WfIorXdf6YZUthm9Q==,iv:cVUCfxllhHK4xdgpZbEh4/RqKOUBSiaLFCDhSq+JBvg=,tag:0GP9W+p8YKKBIajvwPmlgw==,type:str]
-    #ENC[AES256_GCM,data:DuBw5kPc6B7KgmuSaflewC/aofw/mlpFrOUjtu3Fdi8w+I/RwslWbcVqbI2+ooQF42vhJzPJHnyKZi1PomjQdYmy7qWJSCpvPC8glA0YXhapgA==,iv:Y5zfCWbo7wzJWWGPdMccKUxnkChv8YTHl0X2dQox380=,tag:olCqsVdCwADWuG5MN43CCg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:fMN8LOCb+CTqqhRDEzyf,iv:tF9m3KnGLtdU8bDAc/AbCfxxz9RpsQmQN06uWvqkSTE=,tag:i/7NCy06pj/9CF0fOFcC5g==,type:str]
-    #ENC[AES256_GCM,data:CLRbrkO7t0v0rgJBI/OPefvDv9U3BDddfTIisTUrqtfK,iv:QLoH0o0wetjdwfILxFfJHuCqEGNzBYuWq94reZzK4sY=,tag:qmxH2G3H065wKwhc49F3Aw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:0q9qezEdxVdNJ8O7gPTv,iv:6uf8R25ulw0y5plzYhDtaWmLkOOtKcYUCYAr3w7xNts=,tag:sKVsZMTi/6AQ8RXwcb3/bA==,type:str]
-    #ENC[AES256_GCM,data:9Bol1bQO0du1jMRlXEhtzaGHMJj5aF0SJEZD2yRn1jvpqsBrS3pgHqmfLwqkUiCPDHqZbeMWXl6JLG+Hg/OLssuoz5lOAMnrjsHA3/nQceo=,iv:skSBbVMy71nIjxVqMTtOnFHVlRMs0MacpuJx4uFK7/k=,tag:ghHtsdEn6MTNIm0IKSnaBQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:ZplnSXcP1yS9Y9tLwVT+,iv:cW5W9VgM3CxbcbKB5J8jLMcVxfzhbqkqtVBU3Wr7XY4=,tag:XdTABQYtS1wKFv6F8KF8YA==,type:str]
-    #ENC[AES256_GCM,data:YwvxHiVOEY4XpINWyfY6SiNYLY3b/P0Lxww/ADOf2TlH4BujdZ3IXxqTvMgdhT4hhfTg/f9cq+j1xvXNc4Gm6x7JkAS3ASNv4yHzdx4P+93Y6CovLBVn,iv:JISlvl+RK+mvUP+r9nXpjXfQsf2wb3ef/sgoGl9tT5U=,tag:LdYcy5mojPmPAaVj/T+KaQ==,type:comment]
-    #ENC[AES256_GCM,data:zha859/ej8fP5r4zVy6u55eBf6tYi71vmi3ggLoAlvDn+g6gq06KGTnxMH8n3QO2nQ/gqfr//eUq3Uwt5b2vTv61wwIfkABTUbG5wocRbligLaksjSK2BAKA+j5g+RnvfUwMZw9N97tm2rMnqd+Hj44YYWhXn4UdKShOkw==,iv:X4mp9BKRP7XvdQugQH/647q6KJWMfeZXdu3ZNDOUcAk=,tag:n5M/5uhRi6kElzDg5Ske0g==,type:comment]
-    #ENC[AES256_GCM,data:vLP2se5jK+0vrXVQKoL0IIPKA+ZSfziD/c0siZdZ9ivmd7YGMv8IWwijQq2rl0PWhz53Pk/sAtm41W81qtgjSghAMin3wvf+i0KlrFBI5dA=,iv:xx74EtM/xGhyKfB7WHoB27OVe/svhUEkzuxhQmA7gvE=,tag:GhwiM3XPIHMzc12BvrKnFg==,type:comment]
-    #ENC[AES256_GCM,data:e+YbtwpmHjiD2xazY3fpnAaUAd0gpbCx2Vp5B6sVhens//h0Xgcoq2heQlI9fAAzNPQeGHqc,iv:e1RJ23EILbBl3KEPe5SrzYMh5jF8R7fX5j7rbu643jM=,tag:KdY2hJsj18BfZZl9LaJTLw==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:rfkjafRo069xrylOeCM=,iv:wh8blDVB9WSCwvF6Gv4Lt3Ji+zo6TiVt3i/MzWskVE0=,tag:GyT1nttksPcUdZ/Q/5D3FQ==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:jr7TxRNlW+h5SLpI,iv:QSp87WMaf/ABBdcjugf41lE9gOdAwmQYUSW9eZp+vKg=,tag:VRyOHm5z/2MOLFe+dLNOUA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:B7Eadg2Y8OgFT1tQ1Upv0OQ=,iv:msaOOYPWgIgfnLpFFJfpcUJ7hbqeQwEk4eJLBHHzfwM=,tag:a6amdj/w7yU/7o/4W2ECfA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:rotnF9iXbrFlM6l+iwlM4YdSu29cvSqSP32QpONeshM=,iv:zFOwgBV4myUOhEdz4hf0Rg5OO5s69C17/pf0vEYC6H0=,tag:EqgPPT9VD9V2vLrlHzrzvg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y9DCYCzSGTrQ9D1SjWY96HJaKXrgnuWEHnqK1vX7NsLZEk3R2mT+vA==,iv:9unwB+a1tKcvzXqMC7oHYi5QBB8qiLfJYXA020sAcGQ=,tag:gVRuSAOIWPRGX0unq4gswA==,type:str]
-    #ENC[AES256_GCM,data:8RcsTy7cMKTQ9M031eOMuDb0n6mjfDdjhRYuiKT32wow+LOc/CBfJ/+DeAHlU2E4XfHT7MVGlEw2qbDpdYTraA==,iv:xVGNriMJheFGro9JvAHvVoS3KhOiEqSVS6ur5ay1okg=,tag:AU9HsyqRk4RYJhTbvTr2Kg==,type:comment]
-    #ENC[AES256_GCM,data:rCYQ3NDrxH1cCaPtwZLNOPzGuiQ84xmaK5w/17sCnH2mWeBp28XMGIaF8ksxoAZ0kYhztdw58mo=,iv:uwhSdaMBORtUInApdwNfQERBpH9mkijilzv1w8Ev85Q=,tag:mtGyTvsstxDHRIf6RoIFsQ==,type:comment]
-    #ENC[AES256_GCM,data:IIHOXEhp+na28AOr5SALx7W+JcgaZul1Hg==,iv:haanSNhevhDUcNwK23gGh9Bc823KlhMp6zkRB2jppP8=,tag:4i/1jrQcmKrIxLLW4ah4Ig==,type:comment]
-    #ENC[AES256_GCM,data:0jodaeGtmol/UqJlAc5cB7IbkY/qH+k+m4rNTuDkHew80Ps4oYV9DfPaTN4wusmKtELFKs40T/mVf5tadhCs8e7ije0aVMVuWYdGHAo=,iv:WFGJN6U+QX2ML/bR8xBNcJdXPGtYLOLqydb4SkLZ/Ng=,tag:vC+4Y9xAzGLV1L1XEmLFUA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:q4dJiVjYGSyVQkxu6Oh3hVh4/wbXp077AHbL2SsBwLCiu37pSV87x6is6HJhqsuL,iv:GUN6box9692QCdz+QoLmJ7zYqdno4eesA8UP/oo+CEU=,tag:fVMTYaR3Nwlu+/dZP9AFgw==,type:str]
-    #ENC[AES256_GCM,data:qzp7Lt8azluXQ+O4dWDzi/S5VH0gCYWd8rwijdR2qacUplnPJKKEyZ3O2tRt31Cz4KByRnkFWNWwl+MBjBWODZwCNsnc9aA=,iv:Y+UlqNESyeDuV8u4VVF9QPcP/73g+gBOFwKaHnMgreU=,tag:GuWE6pxHXWNo9Z30LPVFPw==,type:comment]
-    #ENC[AES256_GCM,data:cdeKnMpBx8g2PrL0eN990jpp/O8uWrVFjbWDPSX1vPvNnfpMVgb20v9Gf+ZxWfmL+2Xc4Hqj,iv:aeEoDv31HfHbVPWennxgLE3fZ6ZiC/zUPhV3Jd9oH0s=,tag:w5/Em2dLFvctv7xRaaSPOQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:n61LsedErw==,iv:nEzbc8nG6zdiZd5yfCxsj0i4Dg4+4N8HxaR3+dqiqBo=,tag:7JWwHNgKHJVrbEkCK03/Cg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4B8p9RIJbBA8/hrKpalbThy/l+A=,iv:g+b6Ek4eoQoaVGPVPZTPPPnZ/p4QALbudOCRfOKGfYA=,tag:cX9a5plbrk+a5YE5Kzl8fg==,type:str]
-    #ENC[AES256_GCM,data:lA7LcLlbJZlHVdWVuyE=,iv:u+51af206/3oyl3iGIx7nZv51OWvFweUnHF5dOuEl84=,tag:bSbaBh/nUQe/JpU7jXFxdw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:vR81iXCi0kwr1Subeg==,iv:4v5MXp/T0hdcWGzLRsMfxJ5rx5DkkHAa0C/blSbfSuQ=,tag:KLchA+VAENjh1OafGq5knw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:XfhQ4wCgG5AIRMw/Ug==,iv:+botPa6oDfeegC5SoX68Pukfac28KRw4a+G434oI6Uo=,tag:nEdZ0yBwFFd3L3BpQm2mjw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:3LFNHg==,iv:umnsQBD9W/TNWBwpJuMB3t8fvCdPfPHq7xcDsxaV+DU=,tag:fwRMcKalTfzKDz4iRAXiZw==,type:str]
+    #ENC[AES256_GCM,data:JG1JIyfrYzeWX+xt+yl259Sr0qJ/mfPsZPAk/ZmtE695DWsgrLjMm7dItYYfxZLaIacwdL8uvh5IqZr2q0cWSxw=,iv:Fgtg8uZuvvO0NoqsFujxtucBsPL5gu5P7w63qufXsGE=,tag:pSGC+AoWYLSXP20OAbFU6g==,type:comment]
+    #ENC[AES256_GCM,data:hlvWawzKuUI0Kd4E5HWuGJ9kEV7/M0tiTGoVSUSq5va64sqnIYU0f2Q80yg=,iv:3hyMzToXw1DWXII6tOgV0t6o/D12WpFGwvZNBZzeHKU=,tag:Pt5/eKnYtgCVtyCBMTASjg==,type:comment]
+    VIP: ENC[AES256_GCM,data:7k3MGrIaRClCjpdSNA==,iv:0pTBL1DP9e8jOJJe0pC6/eX7kKwTMuxpPwFP/yD1K9I=,tag:NgmwtxUII0nBOlG6yuAggg==,type:str]
+    #ENC[AES256_GCM,data:NFMowpPLnU30qTdaNwOKH/TqMiqOfXP8xdWc,iv:VHiF/S3/jvzUtV6EbwqyhrjuudeQYJV5jezAYiEl3dc=,tag:RdULkpcFRFVS6f4JjhqF9g==,type:comment]
+    #ENC[AES256_GCM,data:PdElk9YslvTu3JCMNU9Rbx140kViKA5KIrZ34rZs6kQhW2JlvaXjPEiTrNKdncaYwuo4Z1WHsh/M32Kd4VsV4UotSkDqA32Es6wHh3QRRG8FqkQebviymhg=,iv:mwpRyPxXApT142WI210WQo0/uCxI+9w+XYxO5tEoTqY=,tag:qsPeJEtpdkQbYQjlIju/Yw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:l9SbSlv85Xq/mJxiH8I=,iv:NSLv4BCfzc5EPx6sB494VMacfjXuwHxrODnTPyedNMQ=,tag:OIvxlJH1u91bfSZUyzN7Dw==,type:str]
+    #ENC[AES256_GCM,data:VgUn60LPG8+VjsbcbiczrfyB1D/l9m/VbwCId+ILcIwWYA==,iv:yZ4XuqzHf0F6Fa6C7P+X7jmQXQ8sl8D5m2naVhFpsQU=,tag:zvE2Ey3djGD+Omb4usfbkw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:MDWh2p6bsCBvo+ImCA==,iv:/YaDNbBZMkjaFNSF5aOQT66jd6+m1s+5OW1WafsAxyM=,tag:bB69mJPaCA/eRS2BPdyC2g==,type:str]
+    #ENC[AES256_GCM,data:0np6vREnn6tOR7PekP46O+4yd4/rsrnBoWbnRZ8gy//HmxIq/t54VxpEWJ3+ja4=,iv:jzshxzv2kdnN11mwnB8TW9wNhTwg9OwHmP4U+Gb44Tw=,tag:UZvoQ1MYb0vYP1QLd5hhkA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:pQFHoIZswOa8ZKB48ouhwun7nqiMZ2PEZrax5jvWMA==,iv:E+VJtKD28dFZS4rYm2PX6d+yW7o6wZEfJM/aPAyJjok=,tag:6GgIZasWZRmVht2qCv43mQ==,type:str]
+    #ENC[AES256_GCM,data:gUNTFPfiy/Nfng6Kvx81hsi2d29Au3BqsmKx29hDq1cZnYGQJDUTU2wKCYEmCkzJz/WSPT7AFgbVNlWiaMdixkzpvGMhRVbOFfePoZPQMATUhg==,iv:N8F/55vH2ttXBLwd9hOLLhnEBoGnEhTjm4V6vhFSiP0=,tag:3PEPeUl4BAZMmQ5vnqfklw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:U8wErQbk4jujaeTVTVXe,iv:DOfIdJazujrcpR4Sv9s4M4OnJ6Ty+WpsYEPqe0iSRDk=,tag:pxB2CQyRGIIoiGOHdc/QpA==,type:str]
+    #ENC[AES256_GCM,data:8AYhuVYUce56LU4TnjYy++DSCXJH0J/TC7KYjYQ5hZQ+,iv:mbM87ctvFu8hnmqXbQwvee+3MesSwPDvitZ10fM2ezI=,tag:+kAplO0WhUuAx606iYU7lg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Y1d+SJpceEg/7Fsgt+7z,iv:yk2vL5NdlFLmc0vIivb92Ji5+B5aCJkLQC5SH8imF3w=,tag:XYIdxTwxvrG6HMmjDwBQew==,type:str]
+    #ENC[AES256_GCM,data:rYrJcZRvtzAkhsUlwZk91f8sxnCrQQO3k7ZyWEpB0tpUdVJgY6JPGkrem0rqw+OVSsGRVDtKIZ3ntGcOcbK6nFRVg78WKAieD3nbl5eoI1A=,iv:BR2Olb81+VsZVDmqf7a0LiRahWCIuyR1RGADKZCnrnQ=,tag:DwvocTe5mf6ZGdaItuVf6g==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:0apt4f3I8hTkPlTM5OKP,iv:HP74WOTl5j3MOe0uiwCEXyd3+caLRe+MwnycQljEJP8=,tag:XXptSUjyDq7aEIk/MwsaJA==,type:str]
+    #ENC[AES256_GCM,data:Sv+YjRVRmGCzQzZufYsEp7wLmJmkBmrPQpFQY2+kFhzf8tLk7fin533iQ8BucBctkN/aO27CizJof61fujQK2vEIKAdid8Cblj+fEEUs8B+dOdjSaknu,iv:N+mMOmrdhnlrM0gswCrVWPuxu7b3qqBcjI6FIR9QNF4=,tag:WQrHDUk+0FHiZ+QU5rECnw==,type:comment]
+    #ENC[AES256_GCM,data:OpGGwXjYv0PNKSpbUUD9VhlZ1rgAltuSN1QbSM3AebQiY0uwAZw3jch3aF4q2Kb1D+K5spHeeA/QmbOZQvbuV0qoz0HtZndj5Dhe0lvMiUQd/ObdGB2A2dTHfDkXiCz4xfjSyOou7udAtGw6NNSWPpVb+NoygTwDL0mCAA==,iv:T704RyvlGHuNTCAMNUwA6foGQ3Y+1MgauK/jTY8V1VU=,tag:0jkoTzz1X1mP3GmGdefLwA==,type:comment]
+    #ENC[AES256_GCM,data:hhjHQ54SsAHRFSh2iZyXWkA/xe3Nue9icfvJE1rue04wZYxfWNA5ppjFFOH7ruVGzdngcGoMQVI4bmPfw47Oz7UVXh8H4imrrUTaXUASty4=,iv:rdh0/S4n0UD1LKAkwZLll5ntZ8X8/QOPf7MUXq29+ZE=,tag:UCPTyT7Ye7BacTS6dXLCGw==,type:comment]
+    #ENC[AES256_GCM,data:oDEycYiuoJRRjRShphc4a8H9pw4O4gt4zbViHGf5H+Ah3nFXfQ+GyYPwGUkkUKolcVJ32yAe,iv:6oFQO+D8qJPwEWuypjlh8OusxRYhnWtl7q//zR/Yeqc=,tag:7H4zMhq1XhnAGYA74knbOg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:iWlGKifN2hELRFRY,iv:eH4kj7d7sTGNlgQo1FddrF7bMfPNiZzJgXQ7x0PhwVg=,tag:TqwG74aI/50lpbJdL0OUMA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:qKOadqwbHr8+dH9Uzbz/Fjs=,iv:lPn4mgz+83w29yWLWIQteAPNPOt7R1u3CS3ob4HYkbc=,tag:2LCQtGIgNR9BMQDIwqokyQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:s7moIses+cYe9WTqPTopBZK+Y0IqsCgNVdXIlNNVra8=,iv:EGKuDHJWH3QbE03mGDbF1b+fdsI2lTN4uft7yK4DD40=,tag:PJLFHQxIuC0uClREYVozVQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0aQsq5pufolfT1MDhLm/Tf/SDtVUejWpixdeYGbiMdJG3yOH+DNHkA==,iv:gcBs4n4CIZ0MdobLKvPaFI0mSk3+T2JJ4nFZGC6wuI4=,tag:1ux5JKq99tPIJKPUls253w==,type:str]
+    #ENC[AES256_GCM,data:Jp+JUO6U/kTMe8nYUxHxSWe3LHvG3+ZZxf9UyJ5UXtpUVA0+HB6HeY0JJZxOj9jBro2ia7EIGJnMH5VI450WNA==,iv:hfPiichRn11LD2GDRNfCETG4Sfua0QyxTiqDW3GAPRo=,tag:FXW5hMjTAjNm8t3Sl/WtzA==,type:comment]
+    #ENC[AES256_GCM,data:EFYZhZUtltLDfn1EqGg3cLQg5Wbb87YU/KhOe0M+xrdDx29GRLEAo1UkS1R9HQ+MldJDfyL28bQ=,iv:nbSMqz1mUgsGlPxGcZ2nbLgHZu5IdyD0qLjjnO1Gnxw=,tag:eRBc05NqYUarX3l+eAxNzw==,type:comment]
+    #ENC[AES256_GCM,data:DIi6/Zk+DQj4q1PTwIVekGBmiwRAx0QH1g==,iv:JEaa1Bygnph+9byLj4UM0amI3N+haMu4EyFdnJ9Ibbw=,tag:NF6sTdc9q+T45lgNytWxjg==,type:comment]
+    #ENC[AES256_GCM,data:2MMsjZPAVrEy97WOoxMSnGJyb4sRrKqunw0jaLC/2B8WpOPJV6xTs73FGNPDZEJ//p1YlmautoglC5gNjiIIDEMWad9nTV7bh2PAGSA=,iv:JuGJwq0929O1SoGvR0HcW87i5LhtBhdnxc39ArifHZc=,tag:PxGSG7rLVMIqcj7vRIWO1Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YbCtfDohcjH/hSDhtGUsetcq5Rbp7LQjcpMv9WvuieVlrYf9SBgR1oo4S60uHSXV,iv:OEg7XVjHZQRXeWYlCcWgxc2JuzbBk3pXyANKxbK7y3M=,tag:jjm1RFcdlghCru2TBMdmRQ==,type:str]
+    #ENC[AES256_GCM,data:R8KlCoZhcPtyjh1Geh2x5yHr3Q/9GiMAklEHdOr/GX3MpYLscznILD2/uVBFLEr9AzTZCI2ii++5T1LA5eiAgGPcdd4+DQw=,iv:hEamKZMZ9WDBgtgvR9jxMqbRTxa1W69s3MhIQmu4zGM=,tag:gZDgSUJ2t6eb3CUkVSEicg==,type:comment]
+    #ENC[AES256_GCM,data:Y8TVF3rnI/7klj4GRyPVCj56hNQk0WtuwNwt5Iy/v4VC1Y5vWB8MGafm4HDgQ7BJiNa4ZJkK,iv:BYN5RtSi5n+G50zSQE35jj5uxRQbCqMWz8VfR5pzprU=,tag:NxCrYTpubgSxiJ/DyJ7v0g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:HjRNx7GePA==,iv:awfaB5qYoymRxZ9MY/EgavvOx4WfXFIcgRqJxgV2d8M=,tag:TmMOGGd4LE6rkaxhEexhFw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4GvFp1FF3M3JZ3rLEj/zWR5akOo=,iv:B0DA6Z8QkUZAzfB4bydOsLSNHrE1nRMMiUyJ/pQfrn0=,tag:WZKWbhyvBYza/JiyV9EEjA==,type:str]
+    #ENC[AES256_GCM,data:7PZXismP2WskCuh3x1Y=,iv:51Hpiksya+JoQCtYZ0bpN+R7I1Cfcv+edgbiQSQHsho=,tag:stBKbeUGqyOnyp8KdYg7LQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:CGpvoLWDmqld1DnhUA==,iv:sG2PfL1eMcKj8wn5cY8Tih8e2E+7hbi2afteYaDIyqY=,tag:3aMQm6lTLSN57fEUx9lU4g==,type:str]
+    SVCNET: ENC[AES256_GCM,data:4OEZyb3GT7QJKPUW1Q==,iv:Z/7zfxgjy3wPXPTeeqVRt+ZhDcrOdLpK8qzkMhQpcZs=,tag:tWWUgm47kCS4qXpxmZZDbw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:HmVhpg==,iv:3WjvG8xURBzqMaF4CvTwLHdE7bBashbWfFq0Fx6T/8w=,tag:YyFIZD9ma/KqcCx+O4aEQQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -52,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEZzY1L3M0S1FBVWdzbVdR
-            ckJSRU1ZMHkwS2J1TU9tOXRoaUZPVjhGWFVRCkhIQy93a01ldmNIWUFCNkMwMVN3
-            dHRkbzZEVTIwOENkRjN0cnplUjZWYjAKLS0tICtpSzgvN3A4aFQ4Ukc1K044WHMw
-            VkFlbkVFMFJBdkVVVXQ3eEcwTDJucXMKXjZw/+OLNS+lwHRZQGMKZpA5gfvPkpCT
-            Z916RRQSHkXJVCeCUAOSDRJtYS+1yVAli8P0eBMf+OyCXEyHgLiAKw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0K1N6SEw0dFZCaldVMllX
+            NGFkRElWWnd1cmdJem9YVzNuQjZ0dlExamtNCmRrazlpK0FkdjZOeE51TFYvZWVU
+            dmJTbEhKTUlnMm11dHhLakRxRkl6bEEKLS0tIGJQQU1NZURFVmpPZGhrMWo5RHhE
+            bHVrOTJ2UFFmcHlWU1BLbWNMSnlyVzQKNSdJR3PTswFtUK2pmtkq101ad8LMJ6fj
+            Bhiy3gayDpgMyaB/A+Gy5C+dhZXW84J9bDWLSzCCUleDkj0UX+LIUg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T19:08:30Z"
-    mac: ENC[AES256_GCM,data:2zLzqfmjRFN7shPeIqZlmmWmC3EdaBXLaCXZEDc8fto9EpGGpFkTFzGByiXWmhBwdcjSH2fX7QcPjyOjO/OMGJum6U7Zuaov/1Nsh038udbK6f/OhEGftSmQ4SC5aDnCHbWauXaryCQuSvvJ+0bL0dbP5Mcow+17WPdPNxGRYWw=,iv:vyfDtpXSWDAVBRRJ+q+gKm5IvPLzZNlGdjZ5Ew4ba3Q=,tag:ipVLf4RdW8BiznHi9BGAUw==,type:str]
+    lastmodified: "2025-01-05T22:01:25Z"
+    mac: ENC[AES256_GCM,data:+38xqU9KSIAtHzuEaq1erUzvOlHccZ6WhpTkAPUceSui6gYbGsS8O0zBZ2LeniNO+PEysxU3P5Q+jRgoJtwsUCR2Dk12N7OGr+Gp8RTURsMH4fVrNXavsmKq8lINBwW+CKicYEXDfHl9nxCetDZiUwNy2szrJm0+oNYfxmg8/gA=,iv:cE3U+8ErTd7Ox3kpnXGq6jWmFEZG6rW1JbFRh+bY0uI=,tag:qg+D9QW/+GHFngggp6aqpA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
