--- a/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
@@ -1,5 +1,3 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -10,28 +8,12 @@ spec:
   chart:
     spec:
       chart: cloudflareddns
-      version: 11.3.1
+      version: 11.4.0
       sourceRef:
         kind: HelmRepository
         name: truecharts
         namespace: flux-system
-      interval: 15m
-  timeout: 20m
-  maxHistory: 3
-  driftDetection:
-    mode: warn
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
   values:
-    TZ: America/Chicago
     cloudflareddns:
       api_token: ${DOMAIN_0_CLOUDFLARE_TOKEN}
       host_zone_record:
@@ -39,4 +21,7 @@ spec:
         record: A
         zone: ${DOMAIN_0_ZONE}
       user: ${DOMAIN_0_EMAIL}
-    
+    persistancepersistence:
+      config:
+        enabled: true
+        mountPath: /config
